fixes height and z-index in SubNav

--- a/app/components/SubNav/index.css
+++ b/app/components/SubNav/index.css
@@ -1,14 +1,15 @@
 #SubNav {
   background-color: var(--dark);
-  height: var(--nav-height);
   left: 0;
   position: fixed;
   text-align: center;
   top: var(--nav-height);
   width: 100%;
+  z-index: 20;
   & .container {
     align-items: center;
     display: flex;
+    height: var(--nav-height);
     margin: 0 auto;
     max-width: 850px;
     width: 100%;
